update index content; updated layout

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>	
-	<title>WebDev Blog</title>
+	<title>Server Homepage</title>
 	<link type="text/css" rel="stylesheet" href="style.css">
 </head>
 
@@ -10,19 +10,19 @@
 
 	<div class="topContainer">
 		<div class="logo">
-			<h1>WEBPAGE TITLE</h1>
+			<h1>Josh's Home Server</h1>
 		</div>
 	</div>
 
 	<div class="navbar">
 		<button>Home</button>
 		<button>About</button>
-		<button>Blog</button>
+		<button>Links</button>
 		<button>Contact</button>
 	</div>
 
 	<div class="content">
-		<h1>Lorem Ipsum</h1>
+		<h1>Josh's Server News</h1>
 			<p>
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et suscipit metus, eget posuere velit. Vivamus tincidunt ullamcorper orci et ultricies. Suspendisse sed consequat felis. Nulla auctor ligula quis libero congue, quis interdum neque facilisis. Sed auctor velit est, eget laoreet nulla pellentesque et. Praesent vitae tempus est, vel elementum eros. Ut et nunc nec sem porta posuere. Cras vel velit orci. Nunc ac purus maximus, porta mauris tincidunt, iaculis urna. Fusce eu tortor eget nulla sagittis dapibus. Phasellus tempor tellus eget viverra molestie. Nullam vitae efficitur sem, eu rhoncus mi.
 				<br>
@@ -44,7 +44,7 @@
 	</div>	
 
 	<div class="notes">
-		<h2>Second Header</h2>
+		<h2>Recent News & Activity</h2>
 		<ul>
 			<li>Something Here</li>
 			<li>Something Here</li>
@@ -54,7 +54,7 @@
 		</ul>
 	</div>
 
-<footer>Blog by Josh</footer>
+<footer>Josh's Home Server</footer>
 
 </body>
 
