made multiple pages

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 	</div>
 
 	<div class="navbar">
-		<button>Home</button>
-		<button>About</button>
-		<button>Links</button>
-		<button>Contact</button>
+		<a href="index.html"><button>Home</button></a>
+		<a href="about.html"><button>About</button></a>
+		<a href="links.html"><button>Links</button></a>
+		<a href="contact.html"><button>Contact</button></a>
 	</div>
 
 	<div class="content">
