--- a/links.html
+++ b/links.html
@@ -23,7 +23,10 @@
 
 	<div class="content" style="height:500px; width:952px;">
 		<h1>Server Links</h1>
-	</div>	
+		<p>
+			<a href="info.php">Info</a>
+		</p>
+	</div>		
 
 
 	</div>
